[tool.poetry]
name = "habushu"
version = "0.1.0"
description = "IDSCI standard python development environment"
authors = ["Kotaro Sonoda"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.25.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
